src/tests/errors/types/001.ura
// parse_errors/016 — unknown struct type referenced in function argument
use "@/header"

fn process(p Widget) void:
    return

main():
    output("hi\n")