src/tests/errors/types/001.err
[1m[0;31merror: [0munknown type 'Widget'
  [1m[34m-->[0m src/tests/errors/types/001.ura:4:14
  [1m[34m|[0m
[1m[34m4 |[0m fn process(p Widget) void:
  [1m[34m|[0m              [1;31m^^^^^^[0m
[1m[0;31merror: [0munexpected token in expression
  [1m[34m-->[0m src/tests/errors/types/001.ura:4:20
  [1m[34m|[0m
[1m[34m4 |[0m fn process(p Widget) void:
  [1m[34m|[0m                    [1;31m^[0m
